@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2013 IBM Corporation and others.
+ * Copyright (c) 2007, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -307,7 +307,7 @@ public abstract class AbstractPublisherApplication implements IApplication {
 				System.out.println(status.getMessage());
 			}
 		}
-		return new Integer(1);
+		return Integer.valueOf(1);
 	}
 
 	protected abstract IPublisherAction[] createActions();
