@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2010 IBM Corporation and others.
+ * Copyright (c) 2009, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -62,7 +62,7 @@ public class AntMirrorLog implements IArtifactMirrorLog {
 	 */
 	private void log(String message, int statusSeverity) {
 		try {
-			log.invoke(task, new Object[] {message, new Integer(mapLogLevels(statusSeverity))});
+			log.invoke(task, new Object[] {message, Integer.valueOf(mapLogLevels(statusSeverity))});
 		} catch (IllegalArgumentException e) {
 			exceptionOccurred(message, e);
 		} catch (IllegalAccessException e) {
