@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2015 IBM Corporation and others.
+ * Copyright (c) 2009, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -78,7 +78,7 @@ public class VerifierApplication implements IApplication {
 			out.close();
 			LogHelper.log(result);
 		}
-		return result.isOK() ? IApplication.EXIT_OK : new Integer(13);
+		return result.isOK() ? IApplication.EXIT_OK : Integer.valueOf(13);
 	}
 
 	/*
