@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2012 IBM Corporation and other.
+ * Copyright (c) 2006, 2016 IBM Corporation and others.
  * The code, documentation and other materials contained herein have been
  * licensed under the Eclipse Public License - v 1.0 by the copyright holder
  * listed above, as the Initial Contributor under such license. The text of
@@ -277,13 +277,13 @@ public class RepositoryTransport extends Transport {
 						Integer retryCount = null;
 						if (socketExceptionRetry == null) {
 							socketExceptionRetry = new HashMap<URI, Integer>();
-							retryCount = new Integer(1);
+							retryCount = Integer.valueOf(1);
 						} else {
 							Integer alreadyRetryCount = socketExceptionRetry.get(toDownload);
 							if (alreadyRetryCount == null)
-								retryCount = new Integer(1);
+								retryCount = Integer.valueOf(1);
 							else if (alreadyRetryCount.intValue() < retry) {
-								retryCount = new Integer(alreadyRetryCount.intValue() + 1);
+								retryCount = Integer.valueOf(alreadyRetryCount.intValue() + 1);
 							}
 						}
 						if (retryCount != null) {
