@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2000, 2015 IBM Corporation and others.
+ *  Copyright (c) 2000, 2016 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -375,19 +375,19 @@ public class DefaultSiteParser extends DefaultHandler {
 
 	private void handleCategoryDefState(String elementName, Attributes attributes) {
 		if (elementName.equals(FEATURE)) {
-			stateStack.push(new Integer(STATE_FEATURE));
+			stateStack.push(Integer.valueOf(STATE_FEATURE));
 			processFeature(attributes);
 		} else if (elementName.equals(BUNDLE)) {
-			stateStack.push(new Integer(STATE_BUNDLE));
+			stateStack.push(Integer.valueOf(STATE_BUNDLE));
 			processBundle(attributes);
 		} else if (elementName.equals(ARCHIVE)) {
-			stateStack.push(new Integer(STATE_ARCHIVE));
+			stateStack.push(Integer.valueOf(STATE_ARCHIVE));
 			processArchive(attributes);
 		} else if (elementName.equals(CATEGORY_DEF)) {
-			stateStack.push(new Integer(STATE_CATEGORY_DEF));
+			stateStack.push(Integer.valueOf(STATE_CATEGORY_DEF));
 			processCategoryDef(attributes);
 		} else if (elementName.equals(DESCRIPTION)) {
-			stateStack.push(new Integer(STATE_DESCRIPTION_CATEGORY_DEF));
+			stateStack.push(Integer.valueOf(STATE_DESCRIPTION_CATEGORY_DEF));
 			processInfo(attributes);
 		} else
 			internalErrorUnknownTag(NLS.bind(Messages.DefaultSiteParser_UnknownElement, (new String[] {elementName, getState(currentState)})));
@@ -395,22 +395,22 @@ public class DefaultSiteParser extends DefaultHandler {
 
 	private void handleCategoryState(String elementName, Attributes attributes) {
 		if (elementName.equals(DESCRIPTION)) {
-			stateStack.push(new Integer(STATE_DESCRIPTION_SITE));
+			stateStack.push(Integer.valueOf(STATE_DESCRIPTION_SITE));
 			processInfo(attributes);
 		} else if (elementName.equals(FEATURE)) {
-			stateStack.push(new Integer(STATE_FEATURE));
+			stateStack.push(Integer.valueOf(STATE_FEATURE));
 			processFeature(attributes);
 		} else if (elementName.equals(BUNDLE)) {
-			stateStack.push(new Integer(STATE_BUNDLE));
+			stateStack.push(Integer.valueOf(STATE_BUNDLE));
 			processBundle(attributes);
 		} else if (elementName.equals(ARCHIVE)) {
-			stateStack.push(new Integer(STATE_ARCHIVE));
+			stateStack.push(Integer.valueOf(STATE_ARCHIVE));
 			processArchive(attributes);
 		} else if (elementName.equals(CATEGORY_DEF)) {
-			stateStack.push(new Integer(STATE_CATEGORY_DEF));
+			stateStack.push(Integer.valueOf(STATE_CATEGORY_DEF));
 			processCategoryDef(attributes);
 		} else if (elementName.equals(CATEGORY)) {
-			stateStack.push(new Integer(STATE_CATEGORY));
+			stateStack.push(Integer.valueOf(STATE_CATEGORY));
 			processCategory(attributes);
 		} else
 			internalErrorUnknownTag(NLS.bind(Messages.DefaultSiteParser_UnknownElement, (new String[] {elementName, getState(currentState)})));
@@ -418,19 +418,19 @@ public class DefaultSiteParser extends DefaultHandler {
 
 	private void handleFeatureState(String elementName, Attributes attributes) {
 		if (elementName.equals(DESCRIPTION)) {
-			stateStack.push(new Integer(STATE_DESCRIPTION_SITE));
+			stateStack.push(Integer.valueOf(STATE_DESCRIPTION_SITE));
 			processInfo(attributes);
 		} else if (elementName.equals(FEATURE)) {
-			stateStack.push(new Integer(STATE_FEATURE));
+			stateStack.push(Integer.valueOf(STATE_FEATURE));
 			processFeature(attributes);
 		} else if (elementName.equals(ARCHIVE)) {
-			stateStack.push(new Integer(STATE_ARCHIVE));
+			stateStack.push(Integer.valueOf(STATE_ARCHIVE));
 			processArchive(attributes);
 		} else if (elementName.equals(CATEGORY_DEF)) {
-			stateStack.push(new Integer(STATE_CATEGORY_DEF));
+			stateStack.push(Integer.valueOf(STATE_CATEGORY_DEF));
 			processCategoryDef(attributes);
 		} else if (elementName.equals(CATEGORY)) {
-			stateStack.push(new Integer(STATE_CATEGORY));
+			stateStack.push(Integer.valueOf(STATE_CATEGORY));
 			processCategory(attributes);
 		} else
 			internalErrorUnknownTag(NLS.bind(Messages.DefaultSiteParser_UnknownElement, (new String[] {elementName, getState(currentState)})));
@@ -438,16 +438,16 @@ public class DefaultSiteParser extends DefaultHandler {
 
 	private void handleBundleState(String elementName, Attributes attributes) {
 		if (elementName.equals(DESCRIPTION)) {
-			stateStack.push(new Integer(STATE_DESCRIPTION_SITE));
+			stateStack.push(Integer.valueOf(STATE_DESCRIPTION_SITE));
 			processInfo(attributes);
 		} else if (elementName.equals(ARCHIVE)) {
-			stateStack.push(new Integer(STATE_ARCHIVE));
+			stateStack.push(Integer.valueOf(STATE_ARCHIVE));
 			processArchive(attributes);
 		} else if (elementName.equals(CATEGORY_DEF)) {
-			stateStack.push(new Integer(STATE_CATEGORY_DEF));
+			stateStack.push(Integer.valueOf(STATE_CATEGORY_DEF));
 			processCategoryDef(attributes);
 		} else if (elementName.equals(CATEGORY)) {
-			stateStack.push(new Integer(STATE_CATEGORY));
+			stateStack.push(Integer.valueOf(STATE_CATEGORY));
 			processCategory(attributes);
 		} else
 			internalErrorUnknownTag(NLS.bind(Messages.DefaultSiteParser_UnknownElement, (new String[] {elementName, getState(currentState)})));
@@ -455,7 +455,7 @@ public class DefaultSiteParser extends DefaultHandler {
 
 	private void handleInitialState(String elementName, Attributes attributes) throws SAXException {
 		if (elementName.equals(SITE)) {
-			stateStack.push(new Integer(STATE_SITE));
+			stateStack.push(Integer.valueOf(STATE_SITE));
 			processSite(attributes);
 		} else {
 			internalErrorUnknownTag(NLS.bind(Messages.DefaultSiteParser_UnknownElement, (new String[] {elementName, getState(currentState)})));
@@ -467,19 +467,19 @@ public class DefaultSiteParser extends DefaultHandler {
 
 	private void handleSiteState(String elementName, Attributes attributes) {
 		if (elementName.equals(DESCRIPTION)) {
-			stateStack.push(new Integer(STATE_DESCRIPTION_SITE));
+			stateStack.push(Integer.valueOf(STATE_DESCRIPTION_SITE));
 			processInfo(attributes);
 		} else if (elementName.equals(FEATURE)) {
-			stateStack.push(new Integer(STATE_FEATURE));
+			stateStack.push(Integer.valueOf(STATE_FEATURE));
 			processFeature(attributes);
 		} else if (elementName.equals(BUNDLE)) {
-			stateStack.push(new Integer(STATE_BUNDLE));
+			stateStack.push(Integer.valueOf(STATE_BUNDLE));
 			processBundle(attributes);
 		} else if (elementName.equals(ARCHIVE)) {
-			stateStack.push(new Integer(STATE_ARCHIVE));
+			stateStack.push(Integer.valueOf(STATE_ARCHIVE));
 			processArchive(attributes);
 		} else if (elementName.equals(CATEGORY_DEF)) {
-			stateStack.push(new Integer(STATE_CATEGORY_DEF));
+			stateStack.push(Integer.valueOf(STATE_CATEGORY_DEF));
 			processCategoryDef(attributes);
 		} else
 			internalErrorUnknownTag(NLS.bind(Messages.DefaultSiteParser_UnknownElement, (new String[] {elementName, getState(currentState)})));
@@ -496,7 +496,7 @@ public class DefaultSiteParser extends DefaultHandler {
 	 * 
 	 */
 	private void internalErrorUnknownTag(String msg) {
-		stateStack.push(new Integer(STATE_IGNORED_ELEMENT));
+		stateStack.push(Integer.valueOf(STATE_IGNORED_ELEMENT));
 		internalError(msg);
 	}
 
@@ -536,7 +536,7 @@ public class DefaultSiteParser extends DefaultHandler {
 	 * @since 2.0
 	 */
 	public SiteModel parse(InputStream in) throws SAXException, IOException {
-		stateStack.push(new Integer(STATE_INITIAL));
+		stateStack.push(Integer.valueOf(STATE_INITIAL));
 		currentState = stateStack.peek().intValue();
 		parser.parse(new InputSource(in), this);
 		if (objectStack.isEmpty())
